--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "vite": "^4.2.0"
-  }
+  },
+  "homepage": "././"
 }
